--- a/index.html
+++ b/index.html
@@ -13,19 +13,37 @@
     <section class="menu">
         <article class="menu-item">
         <img src="./images/pilaf-uzbek-dish-dish-food-wallpaper-preview.jpg" alt="Dish 1">
-        <h2>Dish 1</h2>
-        <p>Prerared with Brian rice, naturaal organic spices and some beaf</p>
+        <h2><span>Pilau</span></h2>
+        <p>East African Pilau is a traditional, beautiful fragrant rice dish made with many aromatic spices that adds an amazing depth of flavor to the rice. It can be made with either beef or chicken.</p>
         <span class="price">Ksh 250</span>
     </article>
     <article class="menu-item">
         <img src="./images/indian-chapatis-dark-background-25458625.webp" alt="Dish 2">
-        <h2>Dish 2</h2>
-        <p>Prepared with wheat floor,sugar and salt</p>
+        <h2><span>Chapati</span></h2>
+        <p> Chapati is a form of roti or rotta (bread). The words are often used interchangeably. The word chapat (Marathi: चापट) means "slap" or "flat," describing the traditional method of forming round pieces of thin dough by slapping the dough between the wetted palms of the hands.</p>
         <span class="price">ksh 50</span>
+    </article>
+    <article class="menu-item">
+        <img src="./images/antony-trivet-food-photographers-based-nairobi-city-county-kenya-287182685.webp" alt="Dish 3">
+        <h2><span>Mukimo</span></h2>
+        <p>Mukimo is a starchy side dish that is perfect alongside vegetable and protein dishes, particularly ones that are spicy or have lots of sauce and flavor.</p>
+        <span class="price">ksh 150</span>
+    </article>
+    <article class="menu-item">
+        <img src="./images/githeri-boiled-con-beans-fried-tomatoes-carrots-211451474.webp" alt="Dish 4">
+        <h2><span>Githeri</span></h2>
+        <p>Githeri (Gĩtheri), also called muthere or mutheri, is a Kenyan traditional meal of maize and legumes (primarily beans) mixed and boiled together. The maize and beans are mixed in a sufuria, a type of pot. Water is then added, and the mixture is boiled until the food is cooked and ready to eat.</p>
+        <span class="price">ksh 100</span>
+    </article>
+    <article class="menu-item">
+        <img src="./images/istockphoto-637885844-612x612.jpg" alt="Dish 4">
+        <h2><span>Ugali Fish</span></h2>
+        <p>In Kenya, ugali was first popularized in the coastal region in the 19th century when Portuguese traders introduced maize to the country. Large-scale maize farming soon followed, initially for export, but later largely for sustaining the workforce</p>
+        <span class="price">ksh 300</span>
     </article>
     </section>
     <footer>
-        <p>&copy 2023 Lafinda Restrant</p>
+        <p>&copy 2023 The Restarant</p>
     </footer>
 </body>
 </html>
