--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restarant Foodmenu <Menu:toolbar></Menu:toolbar></title>
+    <title>Restarant Food Menu <Menu:toolbar></Menu:toolbar></title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
-        <h1>Our Restrant Menu</h1>
+        <h1>Restrant Menu</h1>
     </header>
     <section class="menu">
         <article class="menu-item">
@@ -41,9 +41,15 @@
         <p>In Kenya, ugali was first popularized in the coastal region in the 19th century when Portuguese traders introduced maize to the country. Large-scale maize farming soon followed, initially for export, but later largely for sustaining the workforce</p>
         <span class="price">ksh 300</span>
     </article>
+    <article class="menu-item">
+        <img src="./images/photo-1603133872878-684f208fb84b.avif" alt="Dish 4">
+        <h2><span>Rice Beans</span></h2>
+        <p>Ricebean (Vigna umbellata) is a neglected legume regarded as a minor food and fodder crop in Nepal and northern India, and grown in a range of cropping systems with maize during summer, as a sole crop in the uplands, on rice bunds or in home gardens.</p>
+        <span class="price">ksh 120</span>
+    </article>
     </section>
     <footer>
-        <p>&copy 2023 The Restarant</p>
+        <p>&copy 2023 The Restarant<br><span>Ben Mwangi</span></p>
     </footer>
 </body>
 </html>
