--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restarant Food Menu <Menu:toolbar></Menu:toolbar></title>
+    <title>Restaurant Food Menu <Menu:toolbar></Menu:toolbar></title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
-        <h1>Restrant Menu</h1>
+        <h1>Restaurant Menu</h1>
     </header>
     <section class="menu">
         <article class="menu-item">
@@ -49,7 +49,7 @@
     </article>
     </section>
     <footer>
-        <p>&copy 2023 The Restarant<br><span>Ben Mwangi</span></p>
+        <p>&copy 2023 The Restaurant<br><span>Ben Mwangi</span></p>
     </footer>
 </body>
 </html>
