--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
         <p>Ricebean (Vigna umbellata) is a neglected legume regarded as a minor food and fodder crop in Nepal and northern India, and grown in a range of cropping systems with maize during summer, as a sole crop in the uplands, on rice bunds or in home gardens.</p>
         <span class="price">ksh 120</span>
     </article>
+    <article class="menu-item">
+        <img src="./images/photo-1605704931020-ba62cdb2ba9b.avif" alt="Dish 4">
+        <h2><span>Rice Vegetables</span></h2>
+        <p>Rice vegetable is a healthy part of a plant-based diet. Rice is derived from a plant making it suitable for those that follow a plant-based diet. Rice is not only vegan and vegetarian, but it is also gluten-free, which makes it suitable for those with celiac or following a gluten-free diet.</p>
+        <span class="price">ksh 150</span>
+    </article>
+    <article class="menu-item">
+        <img src="./images/istockphoto-511622035-612x612.jpg" alt="Dish 4">
+        <h2><span>Fruit Salad</span></h2>
+        <p>
+            Fruit salad - Wikipedia
+            Fruit salad is a dish consisting of various kinds of fruit, sometimes served in a liquid, either their juices or a syrup. In different forms, fruit salad can be served as an appetizer or a side as a salad.</p>
+        <span class="price">ksh 150</span>
+    </article>
     </section>
     <footer>
         <p>&copy 2023 The Restaurant<br><span>Ben Mwangi</span></p>
