--- a/index.html
+++ b/index.html
@@ -21,45 +21,55 @@
         <img src="./images/indian-chapatis-dark-background-25458625.webp" alt="Dish 2">
         <h2><span>Chapati</span></h2>
         <p> Chapati is a form of roti or rotta (bread). The words are often used interchangeably. The word chapat (Marathi: चापट) means "slap" or "flat," describing the traditional method of forming round pieces of thin dough by slapping the dough between the wetted palms of the hands.</p>
-        <span class="price">ksh 50</span>
+        <span class="price">Ksh 50</span>
     </article>
     <article class="menu-item">
         <img src="./images/antony-trivet-food-photographers-based-nairobi-city-county-kenya-287182685.webp" alt="Dish 3">
         <h2><span>Mukimo</span></h2>
         <p>Mukimo is a starchy side dish that is perfect alongside vegetable and protein dishes, particularly ones that are spicy or have lots of sauce and flavor.</p>
-        <span class="price">ksh 150</span>
+        <span class="price">Ksh 150</span>
     </article>
     <article class="menu-item">
         <img src="./images/githeri-boiled-con-beans-fried-tomatoes-carrots-211451474.webp" alt="Dish 4">
         <h2><span>Githeri</span></h2>
         <p>Githeri (Gĩtheri), also called muthere or mutheri, is a Kenyan traditional meal of maize and legumes (primarily beans) mixed and boiled together. The maize and beans are mixed in a sufuria, a type of pot. Water is then added, and the mixture is boiled until the food is cooked and ready to eat.</p>
-        <span class="price">ksh 100</span>
+        <span class="price">Ksh 100</span>
     </article>
     <article class="menu-item">
         <img src="./images/istockphoto-637885844-612x612.jpg" alt="Dish 4">
         <h2><span>Ugali Fish</span></h2>
         <p>In Kenya, ugali was first popularized in the coastal region in the 19th century when Portuguese traders introduced maize to the country. Large-scale maize farming soon followed, initially for export, but later largely for sustaining the workforce</p>
-        <span class="price">ksh 300</span>
+        <span class="price">Ksh 300</span>
     </article>
     <article class="menu-item">
         <img src="./images/photo-1603133872878-684f208fb84b.avif" alt="Dish 4">
         <h2><span>Rice Beans</span></h2>
         <p>Ricebean (Vigna umbellata) is a neglected legume regarded as a minor food and fodder crop in Nepal and northern India, and grown in a range of cropping systems with maize during summer, as a sole crop in the uplands, on rice bunds or in home gardens.</p>
-        <span class="price">ksh 120</span>
+        <span class="price">Ksh 120</span>
     </article>
     <article class="menu-item">
         <img src="./images/photo-1605704931020-ba62cdb2ba9b.avif" alt="Dish 4">
         <h2><span>Rice Vegetables</span></h2>
         <p>Rice vegetable is a healthy part of a plant-based diet. Rice is derived from a plant making it suitable for those that follow a plant-based diet. Rice is not only vegan and vegetarian, but it is also gluten-free, which makes it suitable for those with celiac or following a gluten-free diet.</p>
-        <span class="price">ksh 150</span>
+        <span class="price">Ksh 150</span>
     </article>
     <article class="menu-item">
         <img src="./images/istockphoto-511622035-612x612.jpg" alt="Dish 4">
         <h2><span>Fruit Salad</span></h2>
-        <p>
-            Fruit salad - Wikipedia
-            Fruit salad is a dish consisting of various kinds of fruit, sometimes served in a liquid, either their juices or a syrup. In different forms, fruit salad can be served as an appetizer or a side as a salad.</p>
-        <span class="price">ksh 150</span>
+        <p>Fruit salad is a dish consisting of various kinds of fruit, sometimes served in a liquid, either their juices or a syrup. In different forms, fruit salad can be served as an appetizer or a side as a salad.</p>
+        <span class="price">Ksh 150</span>
+    <article class="menu-item">
+            <img src="./images/1000_F_134468531_1L8J4C4kdgPbNOPxk5LtJoZRA4En5e7w.jpg" alt="Dish 4">
+            <h2><span>Andazi</span></h2>
+            <p>Rice vegetable is a healthy part of a plant-based diet. Rice is derived from a plant making it suitable for those that follow a plant-based diet. Rice is not only vegan and vegetarian, but it is also gluten-free, which makes it suitable for those with celiac or following a gluten-free diet.</p>
+            <span class="price">Ksh 30</span>
+    </article>
+    <article class="menu-item">
+            <img src="./images/pexels-photo-1033137.jpeg" alt="Dish 4">
+            <h2><span>African tea</span></h2>
+            <p>Rice vegetable is a healthy part of a plant-based diet. Rice is derived from a plant making it suitable for those that follow a plant-based diet. Rice is not only vegan and vegetarian, but it is also gluten-free, which makes it suitable for those with celiac or following a gluten-free diet.</p>
+            <span class="price">Ksh 30</span>
+    </article>
     </article>
     </section>
     <footer>
