--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
         <span class="price">Ksh 150</span>
     </article>
     <article class="menu-item">
+        <img src="./images/pexels-photo-2396220.jpeg" alt="Dish 4">
+        <h2><span>Coffee</span></h2>
+        <p>Rice vegetable is a healthy part of a plant-based diet. Rice is derived from a plant making it suitable for those that follow a plant-based diet. Rice is not only vegan and vegetarian, but it is also gluten-free, which makes it suitable for those with celiac or following a gluten-free diet.</p>
+        <span class="price">Ksh 100</span>
+    </article>
+    <article class="menu-item">
         <img src="./images/istockphoto-511622035-612x612.jpg" alt="Dish 4">
         <h2><span>Fruit Salad</span></h2>
         <p>Fruit salad is a dish consisting of various kinds of fruit, sometimes served in a liquid, either their juices or a syrup. In different forms, fruit salad can be served as an appetizer or a side as a salad.</p>
